mise a jour des  fonctions

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "npx nodemon app.js",
     "build": "echo 'No build step required'"
   },
   "dependencies": {
